airflow/logs/dag_id=Integrate_Time_Location_Dimension/run_id=manual__2024-08-07T091749.749887+0000/task_id=refresh_stages/attempt=1.log
[2024-08-07T09:18:02.898+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-08-07T09:18:02.933+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Integrate_Time_Location_Dimension.refresh_stages manual__2024-08-07T09:17:49.749887+00:00 [queued]>
[2024-08-07T09:18:02.948+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Integrate_Time_Location_Dimension.refresh_stages manual__2024-08-07T09:17:49.749887+00:00 [queued]>
[2024-08-07T09:18:02.948+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2024-08-07T09:18:02.981+0000] {taskinstance.py:2330} INFO - Executing <Task(SQLExecuteQueryOperator): refresh_stages> on 2024-08-07 09:17:49.749887+00:00
[2024-08-07T09:18:02.986+0000] {standard_task_runner.py:63} INFO - Started process 5567 to run task
[2024-08-07T09:18:02.990+0000] {standard_task_runner.py:90} INFO - Running: ['airflow', 'tasks', 'run', 'Integrate_Time_Location_Dimension', 'refresh_stages', 'manual__2024-08-07T09:17:49.749887+00:00', '--job-id', '216', '--raw', '--subdir', 'DAGS_FOLDER/etl_time_location.dag.py', '--cfg-path', '/tmp/tmpe_czxv6o']
[2024-08-07T09:18:02.992+0000] {standard_task_runner.py:91} INFO - Job 216: Subtask refresh_stages
[2024-08-07T09:18:03.073+0000] {task_command.py:426} INFO - Running <TaskInstance: Integrate_Time_Location_Dimension.refresh_stages manual__2024-08-07T09:17:49.749887+00:00 [running]> on host 45f7764b2bf2
[2024-08-07T09:18:03.253+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='Integrate_Time_Location_Dimension' AIRFLOW_CTX_TASK_ID='refresh_stages' AIRFLOW_CTX_EXECUTION_DATE='2024-08-07T09:17:49.749887+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-08-07T09:17:49.749887+00:00'
[2024-08-07T09:18:03.255+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-08-07T09:18:03.276+0000] {sql.py:276} INFO - Executing: './sql/time_location'
[2024-08-07T09:18:03.288+0000] {base.py:84} INFO - Using connection ID 'postgres_ldtbxh_stage' for task execution.
[2024-08-07T09:18:03.410+0000] {base.py:84} INFO - Using connection ID 'postgres_ldtbxh_stage' for task execution.
[2024-08-07T09:18:03.429+0000] {sql.py:470} INFO - Running statement: './sql/time_location', parameters: None
[2024-08-07T09:18:03.435+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-08-07T09:18:03.436+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 418, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 475, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "'./sql/time_location'"
LINE 1: './sql/time_location'
        ^

[2024-08-07T09:18:03.448+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=Integrate_Time_Location_Dimension, task_id=refresh_stages, run_id=manual__2024-08-07T09:17:49.749887+00:00, execution_date=20240807T091749, start_date=20240807T091802, end_date=20240807T091803
[2024-08-07T09:18:03.484+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 216 for task refresh_stages (syntax error at or near "'./sql/time_location'"
LINE 1: './sql/time_location'
        ^
; 5567)
[2024-08-07T09:18:03.524+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-08-07T09:18:03.574+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-08-07T09:18:03.599+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
